--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <div class="line"></div>
         <div class="line"></div>
     </div>
-    <script src=""></script>
+    <script src="index.js"></script>
 </body>
 </html>
